* Fix: Advanced Columns - Editor end Draggable pointer overflow issue.

--- a/src/blocks/column/editor.scss
+++ b/src/blocks/column/editor.scss
@@ -46,6 +46,7 @@
 	width: 100%;
 }
 
-.uagb-column__inner-wrap {
+.block-editor-page #wpwrap .wp-block .wp-block-uagb-column .uagb-column__inner-wrap {
 	width: 100%;
+	padding: 30px;
 }
